Changelog
=========

v0.0.5
======

- Add Company.FiscalProfile.VatIdentificationNumber
- Add Company.FiscalProfile.TaxIdentificationNumber

v0.0.4
======

Released on 31 January, 2018

- Don't rely on JsonProperty for property names (exception: eve meta fields)

v0.0.3
======

Released on 30 January, 2018

- Rename assembly from Models to Amica.Models.
- IntelliSense and documentantion support.
- Add Company.IsAdministrativeAccount property.
- Rename Predefinizioni class to Preferences
- Rename ProfiloFiscale class to FiscalProfile
- Rename RivalsaInps class to InpsReimbursement
- Rename NaturaPA class to VatExemption
- Rename NaturaPAItem class to VatExemptionItem
- Rename PAHelpers class to ItalianPAHelpers
- Rename ModalitaPagamentoPA class to PaymentMethod
- Rename ContactIs class to Relationship
- Rename Company.ProfiloFiscale to FiscalProfile
- Rename Company.Predefinizioni to Preferences
- Rename Company.CodiceRea to REACode
- Rename Company.LegalEntity to IsLegalEntity
- Rename FiscalProfile.Professionista to IsFreelance
- Rename FiscalProfile.Monomandatario to IsExclusiveAgent
- Rename FiscalProfile.Enasarco to EnasarcoFund
- Rename FiscalProfile.RivalsaInps to InpsReimbursement
- Rename FiscalProfile.CassaAlboProfessionale to FreelanceFund
- Rename FiscalProfile.Ritenuta to Deduction
- Rename Deduction.RataSuImponibile to TaxableShare
- Rename Deduction.IncludeCassaPrevidenziale to IsWelfareIncluded
- Rename Preferences.IvaEsclusa to IsVatExcluded
- Rename Preferences.UnitaMisura to UnitofMeasure
- Rename EmailAttachment.Smtp to SmtpAddress
- Rename Vat.NaturaPA to VatExemption
- Rename ItalianPAHelpers.NaturaPA to VatExemption
- Rename ItalianPAHelpers.ModalitaPagamentoPA to PaymentMethod
- Rename Contact.Is to Contact.Relationship
- Rename Relationship.Active to IsActive
- Rename Relationship.Client to IsClient
- Rename Relationship.Company to IsCompany
- Rename Relationship.Vendor to IsVendor
- Rename Relationship.Courier to IsCourier