@@ -12,14 +12,12 @@ namespace Amica.Models.Documents
             set { SetProperty(ref _name, value); }
             get { return _name; }
         }
-		[JsonProperty("license_id")]
         public string LicenseID
         {
             set { SetProperty(ref _licenseId, value); }
             get { return _licenseId; }
         }
 
-		[JsonProperty("plate_id")]
         public string PlateID
         {
             set { SetProperty(ref _plateId, value); }
